other-vpol/restrict-pod-controller-serviceaccount-updates/restrict-pod-controller-serviceaccount-updates.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-pod-controller-serviceaccount-updates
  annotations:
    policies.kyverno.io/title: Restrict Pod Controller ServiceAccount Updates in ValidatingPolicy
    policies.kyverno.io/category: Other in Vpol 
    policies.kyverno.io/severity: Medium
    policies.kyverno.io/minversion: 1.19.1
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.12.1
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/description: >-
      ServiceAccounts which have the ability to edit/patch workloads which they created
      may potentially use that privilege to update to a different ServiceAccount with higher
      privileges. This policy, intended to be run in `enforce` mode, blocks updates
      to Pod controllers if those updates modify the serviceAccountName field. Updates to Pods
      directly for this field are not possible as it is immutable once set.
spec:
  validationActions: 
    - Audit
  evaluation:
    background:
      enabled: true  
  matchConstraints:
    resourceRules:
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      operations: ["UPDATE"]
      resources: ["deployments"]
    - apiGroups: ["batch"]
      apiVersions: ["v1"]
      operations: ["UPDATE"]
      resources: ["cronjobs"]
  validations:
  - expression: >-
      exceptions.allowedValues.exists(value, value == 'serviceAccountName') ||
      (object.kind == 'Deployment' &&
      object.spec.template.?spec.?serviceAccountName.orValue('') == oldObject.spec.template.?spec.?serviceAccountName.orValue('')) ||
      (object.kind == 'CronJob' &&
      object.spec.jobTemplate.?spec.?template.?spec.?serviceAccountName.orValue('') == oldObject.spec.jobTemplate.?spec.?template.?spec.?serviceAccountName.orValue(''))
    message: "The serviceAccountName field may not be changed once created."
